force-app/main/default/objects/Forecast_Unit_Period__c/fields/Future_Month_formula__c.field-meta.xml
<CustomField>
    <fullName>Future_Month_formula__c</fullName>
    <formula>if(
month ( History_Month__c ) &gt;= month (today()) &amp;&amp; year( History_Month__c ) &gt;= year(today())
,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Month formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>