force-app/main/default/objects/Forecast_Unit_Period__c/fields/Help_Selection__c.field-meta.xml
<CustomField>
    <fullName>Help_Selection__c</fullName>
    <formula>Forecast_Unit__r.Reporting_Region__c</formula>
    <label>Help Selection</label>
    <type>Text</type>
</CustomField>