force-app/main/default/objects/Forecast_Unit_Period__c/fields/Help_YTD__c.field-meta.xml
<CustomField>
    <fullName>Help_YTD__c</fullName>
    <formula>IF( TODAY() &gt;= DATE( YEAR(TODAY()) , MONTH(History_Month__c ) ,1) 
,&quot;yes&quot; , &quot;no&quot;)</formula>
    <label>Help YTD</label>
    <type>Text</type>
</CustomField>