force-app/main/default/objects/Forecast_Unit_Period__c/fields/History_Month__c.field-meta.xml
<CustomField>
    <fullName>History_Month__c</fullName>
    <label>Month</label>
    <type>Date</type>
</CustomField>