force-app/main/default/objects/Forecast_Unit_Period__c/fields/Last_Forecast_Manual_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Forecast_Manual_Update__c</fullName>
    <label>Last Forecast Manual Update</label>
    <type>Date</type>
</CustomField>