force-app/main/default/objects/Forecast_Unit_Period__c/fields/LastModifiedCheck__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedCheck__c</fullName>
    <formula>NOW()- LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedCheck</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>