force-app/main/default/objects/Forecast_Unit_Period__c/fields/Needs_Period_Update__c.field-meta.xml
<CustomField>
    <fullName>Needs_Period_Update__c</fullName>
    <formula>IF(
(X6_months_history_formula__c = 1 &amp;&amp; X6_months_history__c = false)
||
(X6_months_history_formula__c = 0 &amp;&amp; X6_months_history__c = true)
||
/* added 2013-11-04 Werner Grätzer */
X3_months_history_formula__c &lt;&gt; X3_months_history__c
||
(Budget_Actual_FP_formula__c = 1 &amp;&amp; Budget_Actual_FP__c = false)
||
(Budget_Actual_FP_formula__c = 0 &amp;&amp; Budget_Actual_FP__c = true)
||
(Budget_Next_FP_formula__c = 1 &amp;&amp; Budget_next_FP__c = false)
||
(Budget_Next_FP_formula__c = 0 &amp;&amp; Budget_next_FP__c = true)
||
/* added 2013-11-04 Werner Grätzer */
Future_Month_formula__c &lt;&gt; Future_Month__c
,
&quot;yes&quot;,
&quot;no&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Period Update</label>
    <type>Text</type>
</CustomField>