force-app/main/default/objects/Forecast_Unit_Period__c/fields/New_FCUP_Reference_ext_ID__c.field-meta.xml
<CustomField>
    <fullName>New_FCUP_Reference_ext_ID__c</fullName>
    <formula>IF(LEFT( FCUPReference_ext_ID__c ,2)=&quot;O_&quot;,&quot;W&quot;&amp; FCUPReference_ext_ID__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New FCUP Reference ext ID</label>
    <type>Text</type>
</CustomField>