force-app/main/default/objects/Forecast_Unit_Period__c/fields/Order_Book__c.field-meta.xml
<CustomField>
    <fullName>Order_Book__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Order Book</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>