force-app/main/default/objects/Forecast_Unit_Period__c/fields/Season_Index__c.field-meta.xml
<CustomField>
    <fullName>Season_Index__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Season Index</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>