force-app/main/default/objects/Forecast_Unit_Period__c/fields/Temp_Flag_Recalculate__c.field-meta.xml
<CustomField>
    <fullName>Temp_Flag_Recalculate__c</fullName>
    <description>Used for a mass recalculate of the period flags</description>
    <formula>IF(History_Month__c &gt;=  DATE(2013,01,01),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temp Flag Recalculate</label>
    <type>Checkbox</type>
</CustomField>