force-app/main/default/objects/Forecast_Unit_Period__c/fields/Total_Sales_and_Order__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_and_Order__c</fullName>
    <label>Total Sales and Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>