force-app/main/default/objects/Forecast_Unit_Period__c/fields/Value_Order_Sales__c.field-meta.xml
<CustomField>
    <fullName>Value_Order_Sales__c</fullName>
    <label>Value Order Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>