force-app/main/default/objects/Forecast_Unit_Period__c/fields/X3_months_history__c.field-meta.xml
<CustomField>
    <fullName>X3_months_history__c</fullName>
    <defaultValue>0</defaultValue>
    <label>3 months history</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>