force-app/main/default/objects/Forecast_Unit_Period__c/fields/X3_months_history_formula__c.field-meta.xml
<CustomField>
    <fullName>X3_months_history_formula__c</fullName>
    <formula>IF(
(YEAR(History_Month__c)-YEAR(TODAY ()-14))*12+ MONTH(History_Month__c) - MONTH(TODAY ()-14) &lt; 1
&amp;&amp;
(YEAR(History_Month__c)-YEAR(TODAY ()-14))*12+ MONTH(History_Month__c) - MONTH(TODAY ()-14) &gt; -3
&amp;&amp;
Actual_Sales__c + Order_Book__c &gt; 0,
1,0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3 months history formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>