force-app/main/default/objects/Forecast_Unit_Period__c/fields/X4QPeriod__c.field-meta.xml
<CustomField>
    <fullName>X4QPeriod__c</fullName>
    <formula>IF(
ROUND(
(
CASE(MONTH(TODAY()),
1,-1,
2,0,
3,1,
4,-1,
5,0,
6,1,
7,-1,
8,0,
9,1,
10,-1,
11,0,
12,1,
0)
+
(MONTH(History_Month__c) - MONTH(TODAY())
+
(YEAR(History_Month__c) - YEAR (TODAY()))*12)
)
/3
,
0
)
&gt; -2
&amp;&amp;
ROUND(
(
CASE(MONTH(TODAY()),
1,-1,
2,0,
3,1,
4,-1,
5,0,
6,1,
7,-1,
8,0,
9,1,
10,-1,
11,0,
12,1,
0)
+
(MONTH(History_Month__c) - MONTH(TODAY())
+
(YEAR(History_Month__c) - YEAR (TODAY()))*12)
)
/3
,
0
)
&lt; 3
,
1
,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4QPeriod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>