force-app/main/default/objects/Forecast_Unit_Period__c/fields/X6_months_history__c.field-meta.xml
<CustomField>
    <fullName>X6_months_history__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6 months history</label>
    <type>Checkbox</type>
</CustomField>