force-app/main/default/objects/Forecast_Unit_Period__c/fields/X6_months_history_formula__c.field-meta.xml
<CustomField>
    <fullName>X6_months_history_formula__c</fullName>
    <formula>IF(
(YEAR(TODAY())- YEAR(History_Month__c))*12
+
MONTH(TODAY())- MONTH(History_Month__c)

&lt;7
&amp;&amp;
(YEAR(TODAY())- YEAR(History_Month__c))*12
+
MONTH(TODAY())- MONTH(History_Month__c)

&gt;0
,
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>6 months history formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>